<resources>
    <string name="app_name">LoginActivity</string>
    <string name="login_app">Login App</string>
    <string name="btn_login">Login</string>
    <string name="btn_reset">Reset</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="your_password">Your password</string>
    <string name="your_username">Your username</string>
    <string name="toast_login_welcome">Welcome %s !</string>
</resources>