<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/appNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_app"
            android:textAlignment="center"
            android:textSize="50sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_main_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"/>

            <EditText
                android:id="@+id/et_main_username"
                android:hint="@string/your_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_main_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"/>
            <EditText
                android:id="@+id/et_main_password"
                android:hint="@string/your_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_main_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_login"
                android:layout_weight="2"
                tools:ignore="MissingConstraints"/>

            <View
                android:layout_width="20dp"
                android:layout_height="0dp"
                />

            <Button
                android:id="@+id/btn_main_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_reset"
                android:backgroundTint="#F32204"
                android:layout_weight="1"
                tools:ignore="MissingConstraints"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>