<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        >
        <TextView
            android:id="@+id/appNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register"
            android:textAlignment="center"
            android:textSize="50sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_register_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"/>

            <EditText
                android:id="@+id/et_register_username"
                android:hint="@string/your_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

            <TextView
                android:id="@+id/text_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"/>
            <EditText
                android:id="@+id/et_register_password"
                android:hint="@string/your_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
            <EditText
                android:id="@+id/et_register_password_confirm"
                android:hint="@string/hint_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/text_register_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Address"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_register_address_street"
                    android:hint="Your street"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:inputType="text"/>

                <EditText
                    android:id="@+id/et_register_address_number"
                    android:hint="Nº"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="number"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_register_address_city"
                    android:hint="Your city"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:inputType="text"/>

                <EditText
                    android:id="@+id/et_register_address_cp"
                    android:hint="Postal Code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:inputType="number"/>
            </LinearLayout>

            <EditText
                android:id="@+id/et_register_address_country"
                android:hint="Your country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>